Divisione programma in classi Aggiunta di subdirectory test, import di googletesting Bozza di una prova di testing Riaggiunta classe EdgeDetection (con cambio di matrice)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,15 @@
-cmake_minimum_required(VERSION 3.9)
+cmake_minimum_required(VERSION 2.8)
 project(PBM)
-find_package( OpenCV REQUIRED )
+add_executable(PBM main.cpp img.pbm logo.bmp marbles.pbm marbles1.pbm Vd-Orig.pbm src/kip.cpp src/Image.h src/Image.cpp src/kip.h)
+add_subdirectory(test)
+add_subdirectory(src)
+add_subdirectory(lib/googletest-master)
 include_directories( ${OpenCV_INCLUDE_DIRS} )
-set(CMAKE_CXX_STANDARD 11)
-add_executable(PBM main.cpp img.pbm logo.bmp marbles.pbm marbles1.pbm Vd-Orig.pbm kip.cpp kip.h Image.cpp Image.h)
+find_package( OpenCV REQUIRED )
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+target_link_libraries(PBM ${log-lib} ${OpenCV_LIBS} )
 
-target_link_libraries( PBM ${OpenCV_LIBS} )
+
+include_directories(lib/googletest-master/googletest/include)
+include_directories(lib/googletest-master/googlemock/include)
+target_link_libraries(PBM gtest gtest_main)
